[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/player_base.gd" type="Script" id=1]
[ext_resource path="res://scenes/card_holder.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/heart.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/textures/reticle.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/heal.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/hurt.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/shield.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/shoot_noise.wav" type="AudioStream" id=8]

[sub_resource type="CapsuleShape" id=1]

radius = 0.3
height = 0.6

[sub_resource type="CapsuleMesh" id=2]

radius = 0.3
mid_height = 0.6
radial_segments = 16
rings = 6

[sub_resource type="SpatialMaterial" id=3]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 0.734375, 0.734375, 0.734375, 1 )
metallic = 0.05
metallic_specular = 0.4
metallic_texture_channel = 0
roughness = 0.25
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo", "Metallic", "Roughness" ]

[node name="player_base" type="KinematicBody" groups=[
"player",
]]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 4
collision_mask = 7
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
player = 0
speed = 10
jump_height = 10
sensitivity = 5

[node name="collision" type="CollisionShape" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="mesh" type="MeshInstance" parent="." index="1"]

transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = SubResource( 3 )
_sections_unfolded = [ "Transform", "material" ]

[node name="camera" type="Spatial" parent="." index="2"]

[node name="camera" type="Camera" parent="camera" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, -0.22 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 2
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="guncast" type="RayCast" parent="camera/camera" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.28 )
enabled = false
exclude_parent = true
cast_to = Vector3( 0, 0, -25 )
collision_mask = 63
_sections_unfolded = [ "Transform" ]

[node name="fireball_spawn" type="Position3D" parent="camera/camera" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
_sections_unfolded = [ "Transform" ]

[node name="cards" type="Spatial" parent="." index="3"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.452886, 0 )
_sections_unfolded = [ "Transform" ]

[node name="holder" type="Spatial" parent="cards" index="0"]

transform = Transform( -1, 1.45851e-07, -3.90806e-08, 0, 0.258819, 0.965926, 1.50996e-07, 0.965926, -0.258819, 0, -0.0742626, -0.266986 )
_sections_unfolded = [ "Transform" ]

[node name="card_holder" parent="cards/holder" index="0" instance=ExtResource( 2 )]

[node name="hud" type="Control" parent="." index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 960.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="health_container" type="HBoxContainer" parent="hud" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 960.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="buffer_l" type="Control" parent="hud/health_container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="health" type="HBoxContainer" parent="hud/health_container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 204.0
margin_right = 756.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 1

[node name="heart" parent="hud/health_container/health" index="0" instance=ExtResource( 3 )]

anchor_right = 0.0
margin_left = 108.0
margin_right = 172.0
margin_bottom = 200.0

[node name="heart2" parent="hud/health_container/health" index="1" instance=ExtResource( 3 )]

anchor_right = 0.0
margin_left = 176.0
margin_right = 240.0
margin_bottom = 200.0

[node name="heart3" parent="hud/health_container/health" index="2" instance=ExtResource( 3 )]

anchor_right = 0.0
margin_left = 244.0
margin_right = 308.0
margin_bottom = 200.0

[node name="heart4" parent="hud/health_container/health" index="3" instance=ExtResource( 3 )]

anchor_right = 0.0
margin_left = 312.0
margin_right = 376.0
margin_bottom = 200.0

[node name="heart5" parent="hud/health_container/health" index="4" instance=ExtResource( 3 )]

anchor_right = 0.0
margin_left = 380.0
margin_right = 444.0
margin_bottom = 200.0

[node name="buffer_r" type="Control" parent="hud/health_container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 760.0
margin_right = 960.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="reticle" type="Sprite" parent="." index="5"]

modulate = Color( 1, 1, 1, 0.25098 )
position = Vector2( 480, 540 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Visibility" ]

[node name="listener" type="Listener" parent="." index="6"]

current = true
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="heal" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 5 )
volume_db = -30.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="hurt" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 6 )
volume_db = -12.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="shield" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 7 )
volume_db = -30.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="shoot" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 8 )
volume_db = -24.0
autoplay = false
mix_target = 0
bus = "Master"


